--- a/2018-11-08/message-passing-for-actors-and-humans/index.html
+++ b/2018-11-08/message-passing-for-actors-and-humans/index.html
@@ -31,6 +31,7 @@
       </p>
       <p>
         <a href="slides.html">Slides</a>
+        <a href="https://www.youtube.com/watch?v=4tyWBZkkCfI&t=11s">Video</a>
       </p>
     </main>
     <footer>
