--- a/2018-11-08/message-passing-for-actors-and-humans/slides.html
+++ b/2018-11-08/message-passing-for-actors-and-humans/slides.html
@@ -44,6 +44,21 @@
       img {
         max-width: 100%;
       }
+
+      @page {
+        size: 1024px 768px;
+        margin: 0;
+      }
+
+      @media print {
+        .remark-slide-scaler {
+          width: 100% !important;
+          height: 100% !important;
+          transform: scale(1) !important;
+          top: 0 !important;
+          left: 0 !important;
+        }
+      }
     </style>
   </head>
   <body>
