--- a/2019-05-16/raxx-kit-lean-mean-web-development-for-elixir/index.html
+++ b/2019-05-16/raxx-kit-lean-mean-web-development-for-elixir/index.html
@@ -15,9 +15,27 @@
     </header>
     <main class="article">
       <h1>Raxx.Kit Lean mean web development for Elixir</h1>
+      <p>
+        The Raxx ecosystem is a powerful, focused and extensible toolkit for web development.
+        By providing tools focused just on the web layer,
+        it is flexible enough to be used in any kind of application.
+      </p>
+      <p>
+        Raxx.Kit boosts getting started with Raxx.
+        It does this by introducing conventions for project structure, asset management, deployment, testing and more.
+      </p>
+      <p>
+        Now Raxx has reached 1.0, development is focused on bolstering and expanding the conventions in Raxx.Kit that are most useful for developers.
+      </p>
+      <p>
+        Talk given at <a href="https://codesync.global/conferences/code-beam-sto-2019">Code Beam STO 2019</a>.
+      </p>
+      <p>
+        <a href="slides.html">Slides</a>
+      </p>
     </main>
     <footer>
-      <!-- <a href="https://github.com/CrowdHailer/me/blob/gh-pages/2018-11-08/message-passing-for-actors-and-humans/index.html" class="edit-page-link">Edit this page</a> -->
+      <a href="https://github.com/CrowdHailer/me/blob/gh-pages/2019-05-16/raxx-kit-lean-mean-web-development-for-elixir/index.html" class="edit-page-link">Edit this page</a>
     </footer>
   </body>
 </html>
