add video to stockholm talk

--- a/2019-05-16/raxx-kit-lean-mean-web-development-for-elixir/index.html
+++ b/2019-05-16/raxx-kit-lean-mean-web-development-for-elixir/index.html
@@ -32,6 +32,7 @@
       </p>
       <p>
         <a href="slides.html">Slides</a>
+        <a href="https://www.youtube.com/watch?v=5YYpVJHA0sw">Video</a>
       </p>
     </main>
     <footer>
