--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
   <header>
     <h1>Peter Saxton</h1>
     <nav>
-      <a href="https://github.com/CrowdHailer">Github</a>
-      <a href="https://twitter.com/CrowdHailer">Twitter</a>
-      <a href="http://insights.workshop14.io">Company blog</a>
+      <a href="https://github.com/CrowdHailer">Github</a>,
+      <a href="https://twitter.com/CrowdHailer">Twitter</a>,
+      Works at <a href="http://trykno.com">trykno.com</a>.
     </nav>
   </header>
   <section style="padding:0;">
