--- a/2020-06-23/introducing-lean-server-for-midas/index.html
+++ b/2020-06-23/introducing-lean-server-for-midas/index.html
@@ -23,7 +23,7 @@
         It is the default server for the <a href="https://github.com/midas-framework/midas">Midas Web Framework</a>
       </p>
       <pre><code class="language-rust">
-        import midas/lean
+        import midas/lean.{MaxConcurrency}
         import gleam/http
 
         fn handle(_request) {
@@ -96,8 +96,8 @@
         therefore you will use it as a git dependency from `midas-framework/midas`.
       </p>
       <ul>
-        <li>With Elixir and Mix. <a href="#">See the docs</a>.</li>
-        <li>With Erlang and Rebar3. <a href="#">See the docs</a>.</li>
+        <li>With Elixir and Mix. <a href="https://github.com/midas-framework/midas#start-in-an-elixir-application">See the docs</a>.</li>
+        <li>With Erlang and Rebar3. <a href="https://github.com/midas-framework/midas#start-in-an-erlang-application">See the docs</a>.</li>
       </ul>
     </main>
     <footer>
