--- a/2020-06-23/introducing-lean-server-for-midas/index.html
+++ b/2020-06-23/introducing-lean-server-for-midas/index.html
@@ -79,8 +79,8 @@
         This is something that has been on several peoples wish list, including mine, for quite a long time.
       </p>
       <p>
-        Gleam compiles to readable erlang (if "readable erlang" isn't a controversial statement)
-        It also has great interop with erlang and Elixir.
+        Gleam compiles to readable Erlang (if "readable Erlang" isn't a controversial statement)
+        It also has great interop with Erlang and Elixir.
         Because of these features I would argue that it can be considered "production ready",
         if only for parts of an application.
         There are some parts of your application that will benefit more from type safety than others.
