--- a/2020-06-23/introducing-lean-server-for-midas/index.html
+++ b/2020-06-23/introducing-lean-server-for-midas/index.html
@@ -47,7 +47,7 @@
         Ace also supported HTTPS and long lived connections for streaming requests/responses.
       </p>
       <p>
-        In my opinion Ace was successful in it's goals.
+        In my opinion Ace was successful in its goals.
         However, having all these features in one server increased the implementation complexity.
         Since starting Ace I have written several service that use the same narrow subset of features.
         These applications were mostly JSON API services, they did not have streaming.
