--- a/2020-08-19/building-a-waitlist-for-plum-mail/index.html
+++ b/2020-08-19/building-a-waitlist-for-plum-mail/index.html
@@ -30,6 +30,13 @@
     </nav>
   </header>
   <main class="article">
+    <h1>Building a waitlist for plum mail</h1>
+    <img src="screenshot.png" alt="screenshot of plum mail">
+    <p>
+      I have recently started working on a new project,
+      to build a sucessor to email and chat.
+      A way of communicating that is more organised than email and less distracting than chat applications.
+    </p>
     <p>Yesterday we launched plum mail on <a href="https://www.producthunt.com/posts/plum-mail/">product hunt</a>. We got some great support from IH, thank you.</p>
     <p>Plum mail is prelaunch so we need a waitlist. I asked about <a href="https://www.indiehackers.com/post/im-thinking-of-building-my-own-waitlist-software-talk-me-out-of-it-please-60c3e5476c">ways to run a waitlist</a> a few days ago.</p>
     <p>There were several suggestions, but in the end we decided to get users to email us.
